基本重构完成

--- a/src/assets/css/reset.styl
+++ b/src/assets/css/reset.styl
@@ -51,3 +51,8 @@ li
     background-color: #69d2e7
 ::-webkit-scrollbar-track
     background-color: #eee
+.container-content
+    background-color #FFFFFF
+    position relative
+.v-container
+    max-width 850px !important
