--- a/src/assets/css/reset.styl
+++ b/src/assets/css/reset.styl
@@ -52,6 +52,7 @@ li
 ::-webkit-scrollbar-track
     background-color: #eee
 .container-content
+    padding-bottom 30px
     background-color #FFFFFF
     position relative
 .v-container
