时间轴未完成

--- a/src/assets/css/markdown.styl
+++ b/src/assets/css/markdown.styl
@@ -1,84 +1,90 @@
 #primary
-    padding: 10px 0 30px 0
-    color: #797979
+    padding 10px 0 30px 0
+    color #797979
     blockquote
-        color: #797979
-        padding: 50px 35px
-        position: relative
+        color #797979
+        padding 50px 35px
+        position relative
         &::before
-            content: '\f10d'
-            position: absolute
-            font-size: 2.5rem
-            color: #69d2e7
-            top: -10px
-            left: 0 
-            font-family: FontAwesome
+            content '\f10d'
+            position absolute
+            font-size 2.5rem
+            color #69d2e7
+            top -10px
+            left 0 
+            font-family FontAwesome
         &::after
-            content: '\f10e'
-            position: absolute
-            font-size: 2.5rem
-            color: #69d2e7
-            bottom: 0
-            right: 0
-            font-family: FontAwesome
+            content '\f10e'
+            position absolute
+            font-size 2.5rem
+            color #69d2e7
+            bottom 0
+            right 0
+            font-family FontAwesome
         p  
-            padding: 2px 0
+            padding 2px 0
     p  
-        line-height: 30px
-        margin-bottom: 24px
+        line-height 30px
         code 
-            background-color: rgba(254,250,199,1)
-            color: #e67474
-            text-shadow: none
-            border-radius: 5px
+            background-color rgba(254,250,199,1)
+            color #e67474
+            text-shadow none
+            border-radius 5px
     h1 
-        color: #404040
-        display: block
-        font-size: 32px
-        font-weight: bold
-        margin-block-start: 10px
-        margin-block-end: 10px
-        margin-inline-start: 0px
-        margin-inline-end: 0px
+        color #404040
+        display block
+        font-size 32px
+        font-weight bold
+        margin-block-start 10px
+        margin-block-end 10px
+        margin-inline-start 0px
+        margin-inline-end 0px
     h2
-        color: #404040
-        display: block
-        font-size: 24px
-        font-weight: bold
-        margin-block-start: 10px
-        margin-block-end: 10px
-        margin-inline-start: 0px
-        margin-inline-end: 0px
+        color #404040
+        display block
+        font-size 24px
+        font-weight bold
+        margin-block-start 10px
+        margin-block-end 10px
+        margin-inline-start 0px
+        margin-inline-end 0px
     h3 
-        color: #404040
-        display: block
-        font-size: 16px
-        font-weight: bold
-        margin-block-start: 10px
-        margin-block-end: 10px
-        margin-inline-start: 0px
-        margin-inline-end: 0px
+        color #404040
+        display block
+        font-size 16px
+        font-weight bold
+        margin-block-start 10px
+        margin-block-end 10px
+        margin-inline-start 0px
+        margin-inline-end 0px
     ul  
-        display: block
-        margin-block-start: 16px
-        margin-block-end: 16px
-        margin-inline-start: 0px
-        margin-inline-end: 0px
-        padding-inline-start: 40px
+        display block
+        margin-block-start 16px
+        margin-block-end 16px
+        margin-inline-start 0px
+        margin-inline-end 0px
+        padding-inline-start 40px
         li 
-            list-style-type: circle
+            list-style-type circle
     a 
-        color: #e67474;
-        text-decoration: underline dotted rgba(0,0,0,.1)
-        transition: color .2s
+        color #e67474;
+        text-decoration underline dotted rgba(0,0,0,.1)
+        transition color .2s
         &:hover
-            color: #FE9600
-            text-decoration: underline orange
-    strong
-        font-weight: 600
-        color: #404040
+            color #FE9600
+            text-decoration underline orange
+    strong, b
+        font-weight 600
+        color #404040
+        em
+            font-weight 600 
+            font-style italic
+    i, cite, em, var, address, dfn
+        font-style italic
     pre 
-        width: 100%
+        width 100%
         code  
-            background-color: #1d1f21
+            background-color #1d1f21
+    del 
+        margin-bottom 16px
     
