--- a/src/assets/css/markdown.styl
+++ b/src/assets/css/markdown.styl
@@ -35,7 +35,7 @@
             padding 5px
             display inline
             &::after
-                content ''
+                content: ''
             &::before
                 content ''
     h1 
@@ -119,17 +119,96 @@
     i, cite, em, var, address, dfn
         font-style italic
     pre 
+        margin-top: 30px 
         width 100%
+        position relative
+        box-shadow: 0 10px 30px 0px rgba(0,0,0,.4)
+        .copy-code
+            color: #fff
+            position: absolute
+            float: right
+            right: 10px
+            top: 0
+            margin-top: -18px 
+            padding-right: 10px
+            z-index: 2
+            font-size: 16px
         code  
             background-color #1d1f21
             color #FFFFFF
-            padding 5px
+            padding 8px 5px
             font-size 15px
+            word-break break-word
             font-weight normal 
             &::after
                 content ''
             &::before
-                content ''
+                color #fff
+                content attr(data-lang)
+                height 30px
+                line-height 30px
+                background #21252b
+                font-size 16px
+                position absolute
+                margin-top -30px
+                left 0
+                width 100%
+                font-family Ubuntu,sans-serif
+                font-weight 700
+                padding 0 80px
+                text-indent 15px
+                text-align center
+                float left
+                z-index 1
+                border-radius 5px 5px 0 0
+                border-top-left-radius 5px
+                border-top-right-radius 5px
+                border-bottom-right-radius 0
+                border-bottom-left-radius 0
+                pointer-events none
+            table
+                margin 0
+                padding 0
+            .hljs-ln-numbers
+                user-select none
+                text-align center
+                color #888f96
+                background #1d1f21
+                font-family 'Merriweather Sans', 'Source Code Pro', 'Ubuntu', 'Noto Serif SC', 'Noto Serif', 'PT Serif', Microsoft YaHei, monospace, sans-serif, serif
+                vertical-align top
+                left 0
+                width 30px
+            .hljs-ln-code
+                text-align inherit
+                padding-left 5px
+                color #FFFFFF
+                font-family sans-serif
+                font-size 16px
+                &:hover
+                    background-color:rgba(255,255,255,.1)
+                .hljs-doctag, .hljs-formula, .hljs-keyword
+                    color: #c678dd
+                .hljs-comment, .hljs-quote
+                    color #888f96
+                    font-style italic
+                .hljs-addition, .hljs-attribute, .hljs-meta-string, .hljs-regexp, .hljs-string
+                    color #98c379
+                .hljs-deletion, .hljs-name, .hljs-section, .hljs-selector-tag, .hljs-subst
+                    color #e06c75
+                .hljs-literal
+                    color #56b6c2
+                .hljs-built_in, .hljs-class .hljs-title
+                    color #e6c07b
+                .hljs-attr, .hljs-number, .hljs-selector-attr, .hljs-selector-class, .hljs-selector-pseudo, .hljs-template-variable, .hljs-type, .hljs-variable
+                    color #d19a66
+                .hljs-bullet, .hljs-link, .hljs-meta, .hljs-selector-id, .hljs-symbol, .hljs-title
+                    color #61aeee
+                .hljs-emphasis
+                    font-style italic
+                .hljs-strong
+                    font-weight 700
+                .hljs-link
+                    text-decoration underline
     del 
         margin-bottom 16px
     hr 
@@ -145,5 +224,7 @@
         th,td
             color #404040
             text-align right
+            display table-cell
+            vertical-align inherit
         th 
             font-weight 600 
