--- a/src/assets/css/markdown.styl
+++ b/src/assets/css/markdown.styl
@@ -1,4 +1,4 @@
-#primary
+#primary, .comment-body
     padding 10px 0 30px 0
     color #797979
     blockquote
@@ -10,7 +10,7 @@
             position absolute
             font-size 2.5rem
             color #69d2e7
-            top -10px
+            top 0
             left 0 
             font-family FontAwesome
         &::after
@@ -130,7 +130,6 @@
             right: 10px
             top: 0
             margin-top: -18px 
-            padding-right: 10px
             z-index: 2
             font-size: 16px
         code  
@@ -139,7 +138,7 @@
             padding 8px 5px
             font-size 15px
             word-break break-word
-            font-weight normal 
+            font-weight normal
             &::after
                 content ''
             &::before
@@ -167,7 +166,7 @@
                 border-bottom-left-radius 0
                 pointer-events none
             table
-                margin 0
+                margin 5px 0 0 0
                 padding 0
             .hljs-ln-numbers
                 user-select none
