--- a/src/assets/css/reset.styl
+++ b/src/assets/css/reset.styl
@@ -19,7 +19,6 @@ time, mark, audio, video, input
     border 0
     font-size 100%
     vertical-align baseline
-    // font-family source-han-serif-sc,source-han-serif-japanese,Microsoft YaHei, serif
     font-family 'Merriweather Sans','Source Code Pro','Ubuntu','Noto Serif SC','Noto Serif','PT Serif',Microsoft YaHei,monospace,sans-serif,serif
     font-style normal
     font-weight 500
@@ -57,5 +56,20 @@ li
     padding-bottom 30px
     background-color #FFFFFF
     position relative
+    animation main 1s
 .v-container
     max-width 850px !important
+
+textarea
+    &:-webkit-input-placeholder, &:-moz-placeholder, &:-ms-input-placeholder
+        font-size: 16px
+        color: red
+
+@keyframes main 
+    0%
+        opacity 0
+        transform translateY(50px)
+    
+    100%
+        opacity 1
+        transform: translateY(0)
