flx: 修复只有一篇blog的时候出现的空白

--- a/src/assets/css/markdown.styl
+++ b/src/assets/css/markdown.styl
@@ -26,6 +26,7 @@
     p  
         margin-top 16px
         line-height 30px
+        color #797979
         code 
             background-color rgba(254,250,199,1)
             color #e67474
