style: 修改markdown 有关img样式

--- a/src/assets/css/markdown.styl
+++ b/src/assets/css/markdown.styl
@@ -26,7 +26,6 @@
     p  
         margin-top 16px
         line-height 30px
-        color #797979
         code 
             background-color rgba(254,250,199,1)
             color #e67474
@@ -227,4 +226,7 @@
             display table-cell
             vertical-align inherit
         th 
-            font-weight 600 
+            font-weight 600
+    img
+        max-width 100%
+        height auto
